# combinatorials-app

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.bat  setup.py  setup_unix.sh  setup_windows.bat
app/: app.py
app/assets/: layout.css  layout_dektak.css  layout_edx.css  layout_moke.css
app/config/: database changelog.txt  versions.txt
app/modules/: setup.py
app/modules/callbacks/: callbacks_browser.py  callbacks_dektak.py  callbacks_edx.py  callbacks_moke - Copy.py  callbacks_moke.py  callbacks_moke_new.py  callbacks_xrd.py
app/modules/functions/: batch_fit_dektak.py  functions_browser.py  functions_dektak.py  functions_edx.py  functions_moke - Copy.py  functions_moke.py  functions_moke_new.py  functions_shared.py  functions_squid.py  functions_xrd.py
app/modules/interface/: icons.py  widgets_browser.py  widgets_dektak.py  widgets_edx.py  widgets_moke - Copy.py  widgets_moke.py  widgets_squid.py
assets/: layout.css
config/: database changelog.txt  versions.txt
modules/: setup.py
modules/callbacks/: callbacks_browser.py  callbacks_dektak.py  callbacks_edx.py  callbacks_hdf5.py  callbacks_moke.py  callbacks_profil.py  callbacks_squid.py  callbacks_xrd.py
modules/functions/: batch_fit_dektak.py  functions_browser.py  functions_dektak.py  functions_dektak_old.py  functions_edx.py  functions_edx_new.py  functions_edx_old.py  functions_hdf5.py  functions_moke.py  functions_moke_old.py  functions_profil.py  functions_shared.py  functions_xrd.py  functions_xrd_old.py
modules/hdf5_compilers/: hdf5compile_base.py  hdf5compile_dektak.py  hdf5compile_edx.py  hdf5compile_esrf.py  hdf5compile_moke.py  hdf5compile_profil.py  hdf5compile_xrd.py
modules/interface/: icons.py  widgets_browser.py  widgets_dektak.py  widgets_edx.py  widgets_hdf5.py  widgets_moke.py  widgets_profil.py  widgets_squid.py  widgets_xrd.py
