[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "combinatorials_app"
version = "0.5"
description = "High throughput data vizualisation and treatment with interactive interface"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [{ name = "William Rigaut" }, { name = "Pierre Le Berre" }]

classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: MIT",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "dash~=2.18.2",
    "dash_bootstrap_components",
    "plotly ~= 6.0.0",
    "scipy~=1.15.1",
    "IPython~=8.32.0",
    "openpyxl~=3.1.5",
    "numpy~=2.2.2",
    "natsort~=8.4.0",
    "pandas~=2.2.3",
    "setuptools~=75.8.0",
    "dash-bootstrap-components~=1.7.1",
    "h5py~=3.12.1",
]

[project.optional-dependencies]
dev = ["pytest"]


[tool.coverage.run]
omit = ["combinatorials_app/tests/*"]

[tool.setuptools.packages.find]
where = ["modules"]
include = [
    "callbacks*",
    "functions*",
    "interface*",
    "hdf5_compilers*",
] # alternatively: `exclude = ["additional*"]`
namespaces = false
